[gd_scene load_steps=10 format=3 uid="uid://br2epcjgcbx56"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_8f88l"]
[ext_resource type="Shader" path="res://Materials/vhs_effect.gdshader" id="1_87dfx"]
[ext_resource type="Texture2D" uid="uid://bfegtg848oh30" path="res://Assets/Textures/UI/camera_corner.png" id="2_0fyd0"]
[ext_resource type="Texture2D" uid="uid://bvou5ejadxdym" path="res://Assets/Textures/UI/rec.png" id="2_dstve"]
[ext_resource type="Texture2D" uid="uid://bbaptwixcnhug" path="res://Assets/Textures/UI/battery3.png" id="4_q0jmh"]
[ext_resource type="Texture2D" uid="uid://vh1nrm4r01ql" path="res://Assets/Textures/UI/arrow.png" id="5_ghdov"]
[ext_resource type="Texture2D" uid="uid://dlt152c3myokx" path="res://Assets/Textures/UI/pause_button.png" id="6_hs223"]

[sub_resource type="LabelSettings" id="LabelSettings_bv3ba"]
font_size = 32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8l8qr"]
shader = ExtResource("1_87dfx")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8f88l")

[node name="Corner1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 56.0
texture = ExtResource("2_0fyd0")

[node name="Corner2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 16.0
offset_right = 664.0
offset_bottom = 56.0
rotation = 1.5708
texture = ExtResource("2_0fyd0")

[node name="Corner3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 344.0
offset_right = 56.0
offset_bottom = 384.0
rotation = -1.5708
texture = ExtResource("2_0fyd0")

[node name="Corner4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 344.0
offset_right = 664.0
offset_bottom = 384.0
rotation = 3.14159
texture = ExtResource("2_0fyd0")

[node name="REC" type="TextureRect" parent="."]
custom_minimum_size = Vector2(48, 20)
layout_mode = 0
offset_left = 74.0
offset_top = 38.0
offset_right = 122.0
offset_bottom = 58.0
texture = ExtResource("2_dstve")

[node name="Battery" type="TextureRect" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 498.0
offset_right = 626.0
offset_bottom = 128.0
texture = ExtResource("4_q0jmh")

[node name="Hour" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 291.0
offset_right = 113.0
offset_bottom = 336.0
text = "00:00"
label_settings = SubResource("LabelSettings_bv3ba")

[node name="ButtonRight" type="Button" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 144.0
offset_right = 640.0
offset_bottom = 208.0
icon = ExtResource("5_ghdov")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ButtonLeft" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 208.0
offset_right = 128.0
offset_bottom = 272.0
rotation = 3.14159
icon = ExtResource("5_ghdov")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PauseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 64.0
icon = ExtResource("6_hs223")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8l8qr")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="mouse_entered" from="ButtonRight" to="." method="_on_button_right_mouse_entered"]
[connection signal="mouse_exited" from="ButtonRight" to="." method="_on_button_right_mouse_exited"]
[connection signal="mouse_entered" from="ButtonLeft" to="." method="_on_button_left_mouse_entered"]
[connection signal="mouse_exited" from="ButtonLeft" to="." method="_on_button_left_mouse_exited"]
[connection signal="mouse_entered" from="PauseButton" to="." method="_on_button_right_mouse_entered"]
[connection signal="mouse_exited" from="PauseButton" to="." method="_on_button_right_mouse_exited"]
